--- a/startup.ipynb
+++ b/startup.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "id": "7760418b-e341-4808-817e-2affc4d1f212",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,9 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "path = \"\""
    ]
@@ -2424,171 +2427,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 95,
    "id": "8f34999d-6eba-47c7-b19e-eb2988f06f89",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from math import sqrt\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, accuracy_score\n",
     "from sklearn.model_selection import KFold\n",
+    "from sklearn.ensemble import VotingClassifier\n",
     "\n",
     "\n",
-    "class ModelEvalPred:\n",
-    "  def __init__(self, train_df, test_df, in_cols, target):\n",
-    "    self.train_df = train_df\n",
-    "    self.test_df = test_df\n",
-    "    self.in_cols = in_cols \n",
-    "    self.target = target\n",
+    "class ModelEvalPredReg:\n",
+    "    def __init__(self, train_df, test_df, in_cols, target):\n",
+    "        self.train_df = train_df\n",
+    "        self.test_df = test_df\n",
+    "        self.in_cols = in_cols \n",
+    "        self.target = target\n",
     "\n",
-    "  def eval_model(self, models, show=True, shuf=False):\n",
-    "      kf = KFold(n_splits=5, shuffle=shuf)\n",
-    "      scores = []\n",
-    "      for train, test in kf.split(self.train_df):\n",
-    "          results = []\n",
-    "          for model in models:\n",
-    "              model.fit(self.train_df[self.in_cols].iloc[train], self.train_df[self.target].iloc[train])\n",
-    "              results.append(model.predict(self.train_df[self.in_cols].iloc[test]))\n",
-    "          rmse = sqrt(mean_squared_error(self.train_df[self.target].iloc[test], np.mean(results, axis=0)))\n",
-    "          scores.append(rmse)\n",
-    "          if show:\n",
-    "              print(rmse)\n",
-    "      if show:\n",
-    "          print(\"Average score in 5-fold CV:\", np.mean(scores))\n",
-    "      return np.mean(scores)\n",
+    "    def eval_model(self, models, weights=None, show=True, shuf=False):\n",
+    "        kf = KFold(n_splits=5, shuffle=shuf)\n",
+    "        scores = []\n",
+    "        for train, test in kf.split(self.train_df):\n",
+    "            results = []\n",
+    "            for model in models:\n",
+    "                model.fit(self.train_df[self.in_cols].iloc[train], self.train_df[self.target].iloc[train])\n",
+    "                results.append(model.predict(self.train_df[self.in_cols].iloc[test]))\n",
+    "            if weights is None:\n",
+    "                rmse = sqrt(mean_squared_error(self.train_df[self.target].iloc[test], np.mean(results, axis=0)))\n",
+    "            else:\n",
+    "                rmse = sqrt(mean_squared_error(self.train_df[self.target].iloc[test], np.average(results, axis=0, weights=weights)))\n",
+    "            scores.append(rmse)\n",
+    "            if show:\n",
+    "                print(rmse)\n",
+    "        if show:\n",
+    "            print(\"Average score in 5-fold CV:\", np.mean(scores))\n",
+    "        return np.mean(scores)\n",
     "    \n",
-    "  def predict(self, models):\n",
-    "      preds = []\n",
-    "      for model in models:\n",
-    "          model.fit(self.train_df[self.in_cols], self.train_df[self.target])\n",
-    "          preds.append(model.predict(self.test_df[self.in_cols]))\n",
-    "      return np.mean(preds, axis=0)"
+    "    def predict(self, models):\n",
+    "        preds = []\n",
+    "        for model in models:\n",
+    "            model.fit(self.train_df[self.in_cols], self.train_df[self.target])\n",
+    "            preds.append(model.predict(self.test_df[self.in_cols]))\n",
+    "        return np.mean(preds, axis=0)\n",
+    "\n",
+    "class ModelEvalPredCla:\n",
+    "    def __init__(self, train_df, test_df, in_cols, target):\n",
+    "        self.train_df = train_df\n",
+    "        self.test_df = test_df\n",
+    "        self.in_cols = in_cols \n",
+    "        self.target = target\n",
+    "    \n",
+    "    def eval_model(self, models, show=True, shuf=False):\n",
+    "        kf = KFold(n_splits=5, shuffle=shuf)\n",
+    "        scores = []\n",
+    "        for train, test in kf.split(self.train_df):\n",
+    "            results = []\n",
+    "            vot_cls = VotingClassifier(estimators=models, voting='soft')\n",
+    "            vot_cls.fit(self.train_df[self.in_cols].iloc[train], self.train_df[self.target].iloc[train])\n",
+    "            acc = accuracy_score(self.train_df[self.target].iloc[test], vot_cls.predict(self.train_df[self.in_cols].iloc[test]))\n",
+    "            scores.append(acc)\n",
+    "            if show:\n",
+    "                print(acc)\n",
+    "        if show:\n",
+    "            print(\"Average score in 5-fold CV:\", np.mean(scores))\n",
+    "        return np.mean(scores)\n",
+    "        \n",
+    "    def predict(self, models):\n",
+    "        vot_cls = VotingClassifier(estimators=models, voting='soft')\n",
+    "        vot_cls.fit(self.train_df[self.in_cols], self.train_df[self.target])\n",
+    "        return vot_cls.predict(self.test_df[self.in_cols])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 96,
    "id": "135ab352-3f09-44d1-9193-4b044ddb05b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.ModelEvalPred at 0x7f8a6768dd00>"
+       "<__main__.ModelEvalPredReg at 0x7f8a3bcaf0d0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "modval = ModelEvalPred(train_df, test_df, in_cols, ycol)\n",
+    "modval = ModelEvalPredReg(train_df, test_df, in_cols, ycol)\n",
     "modval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "id": "dc4fd838-7797-4afe-bd13-5932c48fc71f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/jonny/Documents/Dev/DS/predict-price/startup.ipynb Cell 40'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jonny/Documents/Dev/DS/predict-price/startup.ipynb#ch0000039?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlightgbm\u001b[39;00m \u001b[39mimport\u001b[39;00m LGBMRegressor\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jonny/Documents/Dev/DS/predict-price/startup.ipynb#ch0000039?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcatboost\u001b[39;00m \u001b[39mimport\u001b[39;00m CatBoostRegressor\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/jonny/Documents/Dev/DS/predict-price/startup.ipynb#ch0000039?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mxgboost\u001b[39;00m \u001b[39mimport\u001b[39;00m XGBRegressor\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jonny/Documents/Dev/DS/predict-price/startup.ipynb#ch0000039?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mensemble\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor, ExtraTreesRegressor, BaggingRegressor\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jonny/Documents/Dev/DS/predict-price/startup.ipynb#ch0000039?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtree\u001b[39;00m \u001b[39mimport\u001b[39;00m DecisionTreeRegressor, ExtraTreeRegressor\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "343.1713643599632\n",
+      "264.371859064844\n",
+      "280.2801119772103\n",
+      "286.62742482565085\n",
+      "327.17332472768726\n",
+      "Average score in 5-fold CV: 300.3248169910711\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "300.3248169910711"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# import all relevant models\n",
     "from lightgbm import LGBMRegressor\n",
     "from catboost import CatBoostRegressor\n",
-    "# from xgboost import XGBRegressor\n",
+    "from xgboost import XGBRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor, ExtraTreesRegressor, BaggingRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor, ExtraTreeRegressor\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet, BayesianRidge, SGDRegressor\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.kernel_ridge import KernelRidge\n",
-    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, ConstantKernel\n",
+    "# from sklearn.tree import DecisionTreeRegressor, ExtraTreeRegressor\n",
+    "# from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet, BayesianRidge, SGDRegressor\n",
+    "# from sklearn.neighbors import KNeighborsRegressor\n",
+    "# from sklearn.svm import SVR\n",
+    "# from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "# from sklearn.neural_network import MLPRegressor\n",
+    "# from sklearn.kernel_ridge import KernelRidge\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "models = [\n",
-    "    LinearRegression(),\n",
-    "    Ridge(),\n",
-    "    Lasso(),\n",
-    "    ElasticNet(),\n",
-    "    BayesianRidge(),\n",
-    "    SGDRegressor(),\n",
-    "    KNeighborsRegressor(),\n",
-    "    SVR(),\n",
-    "    GaussianProcessRegressor(),\n",
-    "    MLPRegressor(),\n",
-    "    KernelRidge(kernel=RBF()),\n",
-    "    KernelRidge(kernel=WhiteKernel()),\n",
-    "    KernelRidge(kernel=ConstantKernel()),\n",
-    "    DecisionTreeRegressor(),\n",
-    "    ExtraTreeRegressor(),\n",
-    "    RandomForestRegressor(),\n",
-    "    GradientBoostingRegressor(),\n",
-    "    AdaBoostRegressor(),\n",
-    "    BaggingRegressor(),\n",
+    "    # RandomForestRegressor(n_estimators=100, max_depth=10, random_state=0),\n",
+    "    # GradientBoostingRegressor(),\n",
+    "    # BaggingRegressor(),\n",
     "    LGBMRegressor(),\n",
-    "    CatBoostRegressor(),\n",
-    "    # XGBRegressor()\n",
+    "    CatBoostRegressor(verbose=False),\n",
+    "    XGBRegressor(),\n",
     "\n",
     "]\n",
     "        \n",
     "\n",
-    "# lt = LGBMRegressor()\n",
-    "# cat = CatBoostRegressor(verbose=False)\n",
-    "# models = [cat, lt]\n",
     "\n",
-    "modval.eval_model(models)"
+    "modval.eval_model(models, weights=[.25, .5, .25]) # 311.8702314981922"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "693061e7-5bbc-4a70-acb8-22f11a24f321",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3289.5455082 ,  1861.34452185, 11756.82316232, ...,\n",
-       "        6128.31365057,  3465.3728652 ,  1000.94084445])"
+       "array([ 3287.40598364,  1848.10837697, 11680.44315151,  9345.01742756,\n",
+       "        5699.52396111])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred = modval.predict(models)\n",
-    "pred"
+    "pred[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "ead41ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product_id</th>\n",
+       "      <th>Selling_Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SCHE4YSTDVPVZVXW</td>\n",
+       "      <td>3287.405984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ACCEGCATKHNRXUHW</td>\n",
+       "      <td>1848.108377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NKCE6GJ5XVJDXNNZ</td>\n",
+       "      <td>11680.443152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NKCEB8BK3ZXDHDHM</td>\n",
+       "      <td>9345.017428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TOPEFDXSAHRNPF94</td>\n",
+       "      <td>5699.523961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3425</th>\n",
+       "      <td>BBAE9K7BXFUTDNBK</td>\n",
+       "      <td>3931.907689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3426</th>\n",
+       "      <td>RTRDYPA4PJHCJCGF</td>\n",
+       "      <td>9303.451614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3427</th>\n",
+       "      <td>TUNE8FWQBS7TVVT7</td>\n",
+       "      <td>6059.295646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3428</th>\n",
+       "      <td>NKCEGMUABCRGUZPE</td>\n",
+       "      <td>3588.869089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3429</th>\n",
+       "      <td>RNGE7M92KAQWUBCS</td>\n",
+       "      <td>974.796469</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3430 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Product_id  Selling_Price\n",
+       "0     SCHE4YSTDVPVZVXW    3287.405984\n",
+       "1     ACCEGCATKHNRXUHW    1848.108377\n",
+       "2     NKCE6GJ5XVJDXNNZ   11680.443152\n",
+       "3     NKCEB8BK3ZXDHDHM    9345.017428\n",
+       "4     TOPEFDXSAHRNPF94    5699.523961\n",
+       "...                ...            ...\n",
+       "3425  BBAE9K7BXFUTDNBK    3931.907689\n",
+       "3426  RTRDYPA4PJHCJCGF    9303.451614\n",
+       "3427  TUNE8FWQBS7TVVT7    6059.295646\n",
+       "3428  NKCEGMUABCRGUZPE    3588.869089\n",
+       "3429  RNGE7M92KAQWUBCS     974.796469\n",
+       "\n",
+       "[3430 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_df[\"Selling_Price\"] = np.abs(pred)\n",
     "_cols = [\"Product_id\", \"Selling_Price\"]\n",
@@ -2599,13 +2729,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "a82e38bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub.to_csv(\"first_sub.csv\", index=False)"
+    "sub.to_csv(\"submission/second_sub.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01e35d45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1932f18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d92bb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beb85ced",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
